change overflow settings to prevent white space bounce on top and bottom

--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 }
 html {
   height: 100%;
+  overflow: hidden;
 }
 body {
   background: url('img/earth.jpg') no-repeat center center fixed;
@@ -18,6 +19,8 @@ body {
   font-weight: 100;
   width: 100%;
   text-align: center;
+  height: 100%;
+  overflow: auto;
 }
 #symbol {
   position: fixed;
@@ -56,7 +59,7 @@ h2 {
 #presentation-enlighten {
   background-color: #999;
   min-height: 100px;
-  max-height: 50%;
+  /*max-height: 50%;*/
   padding-bottom: 0px;
   opacity: 0;
 }
